Update tipis tipis

--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/style.css">
     <title>Sasadu - Edukasi Sunat Perempuan</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+
     <header>
         <nav>
             <div class="logo">SASADU</div>
-            <ul class="nav-link">
-                <li><a href="">Beranda</a></li>
-                <li><a href="">Apa itu P2GP?</a></li>
-                <li><a href="">Dampak</a></li>
-                <li><a href="">Hukum & Agama</a></li>
-                <li><a href="">Mitos vs Fakta</a></li>
+            <ul class="nav-links">
+                <li><a href="#home">Beranda</a></li>
+                <li><a href="#about">Apa itu P2GP?</a></li>
+                <li><a href="#dampak">Dampak</a></li>
+                <li><a href="#perspektif">Hukum & Agama</a></li>
+                <li><a href="#mitos">Mitos vs Fakta</a></li>
             </ul>
             <div class="burger">
                 <div class="line1"></div>
@@ -29,7 +30,7 @@
         <div class="hero-content">
             <h1>Sasarengan Sadayana Edukasi Sunat Perempuan</h1>
             <p>Bersama melindungi perempuan dan anak dari praktik berbahaya. P2GP bukan sekadar tradisi, tapi masalah kesehatan dan hak asasi.</p>
-            <a href="" class="btn">Pelajari Lebih Lanjut</a>
+            <a href="#about" class="btn">Pelajari Lebih Lanjut</a>
         </div>
     </section>
 
@@ -37,25 +38,25 @@
         <h2>Apa itu P2GP?</h2>
         <div class="about-content">
             <div class="about-img">
-                <img src="" alt="">
+                <p>[Area Gambar Ilustrasi]</p>
             </div>
             <div class="about-text">
                 <p><strong>P2GP</strong> (Pemotongan dan Pelukaan Genitalia Perempuan) adalah segala bentuk pemotongan alat kelamin perempuan, baik sebagian atau keseluruhan, atau perlukaan lain pada organ kelamin perempuan dengan alasan di luar medis.</p>
                 <br>
                 <p>Jenis tindakan ini meliputi:</p>
-                <ul style="margin-left: 20px;">
+                <ul class="content-list">
                     <li>Pemotongan klitoris (insisi/eksisi).</li>
                     <li>Penggoresan atau penusukan jarum.</li>
-                    <li>Pelukaan simbolis (seperti "cubit kodok", "nyepitan", atau "mandi lemon").</li>
+                    <li>Pelukaan simbolis (seperti "cubit kodok" atau "nyepitan").</li>
                 </ul>
                 <br>
-                <p>Data menunjukkan praktik ini sering kali dilakukan pada usia bayi (0-5 bulan) dan dapat dilakukan oleh tenaga medis maupun dukun bayi.</p>
+                <p>Data Riskesdas menunjukkan praktik ini sering kali dilakukan pada usia bayi (0-5 bulan) dan dapat dilakukan oleh tenaga medis maupun dukun bayi.</p>
             </div>
         </div>
     </section>
 
     <section id="dampak" class="bg-pink">
-        <h2>Dampak kesehatan</h2>
+        <h2>Dampak Kesehatan</h2>
         <div class="cards">
             <div class="card">
                 <h3>Jangka Pendek</h3>
@@ -82,16 +83,17 @@
         <div id="Hukum" class="tab-content active">
             <h3>Perlindungan Hukum di Indonesia</h3>
             <p>Negara hadir untuk melindungi anak perempuan. Berdasarkan <strong>UU No 17 Tahun 2023</strong> tentang Kesehatan, praktik yang membahayakan reproduksi dilarang.</p>
-            <p>Terbaru, <strong>PP No 20 Tahun 2024</strong> secara eksplisit menyebutkan upaya menghapus praktik sunat perempuan. Organisasi profesi seperti IBI (Ikatan Bidan Indonesia) juga telah melarang anggotanya melakukan praktik ini.</p>
+            <br>
+            <p>Terbaru, <strong>PP No 28 Tahun 2024</strong> secara eksplisit menyebutkan upaya menghapus praktik sunat perempuan. Organisasi profesi seperti IBI (Ikatan Bidan Indonesia) juga telah melarang anggotanya melakukan praktik ini.</p>
         </div>
 
         <div id="Agama" class="tab-content">
             <h3>Pandangan Islam & KUPI</h3>
-            <p>Banyak ulama menegaskan bahwa <strong>tidak ada dalil sahih</strong> yang mewajibkan khitan perempuan. Hadis yang sering di kutip dinilai lemah (dhaif) oleh ahli medis.</p>
+            <p>Banyak ulama menegaskan bahwa <strong>tidak ada dalil sahih</strong> yang mewajibkan khitan perempuan. Hadis yang sering dikutip dinilai lemah (dhaif) oleh ahli hadis.</p>
             <br>
             <p>Kongres Ulama Perempuan Indonesia (KUPI) menyatakan sikap keagamaan:</p>
             <blockquote class="quote-box">
-                "Hukum melakukan tindakan pemotongan/pelukaan genitalia perempuan (P2GP) tanpa alasan medis adalah <strongs>Haram</strongs>. Melindungi perempuan dari bahaya ini adalah Wajib."
+                "Hukum melakukan tindakan pemotongan/pelukaan genitalia perempuan (P2GP) tanpa alasan medis adalah <strong>Haram</strong>. Melindungi perempuan dari bahaya ini adalah Wajib."
             </blockquote>
             <p style="margin-top: 10px;">Prinsip utamanya adalah <em>La dharara wa la dhirar</em> (jangan membahayakan dan jangan dibahayakan).</p>
         </div>
@@ -115,7 +117,7 @@
                     <span>+</span>
                 </div>
                 <div class="accordion-body">
-                    <p><strong>Fakta:</strong> Mayoritas ulama berpendapat tidak wajib (hanya tradisi/makrumah). Lembaga seperti Al-Azhar Mesir bahkan mengharamkanya karena terbukti membawa mudharat (bahaya).</p>
+                    <p><strong>Fakta:</strong> Mayoritas ulama berpendapat tidak wajib (hanya tradisi/makrumah). Lembaga seperti Al-Azhar Mesir bahkan mengharamkannya karena terbukti membawa mudharat (bahaya).</p>
                 </div>
             </div>
             <div class="accordion-item">
@@ -133,7 +135,7 @@
     <footer>
         <h3>SASADU</h3>
         <p>Inisiatif Edukasi Pencegahan P2GP.</p>
-        <p class="footer-note">Sumber data: Dokumentasi Sosialisasi P2PG, KUPI, & Riset Kesehatan.</p>
+        <p class="footer-note">Sumber data: Dokumen Sosialisasi P2GP, KUPI, & Riset Kesehatan.</p>
     </footer>
 
     <script src="assets/script.js"></script>
