--- a/index.html
+++ b/index.html
@@ -1,143 +1,219 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sasadu - Edukasi Sunat Perempuan</title>
-    <link rel="stylesheet" href="assets/style.css">
-</head>
-<body>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Poppins:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/style.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <div class="logo">SASADU</div>
-            <ul class="nav-links">
-                <li><a href="#home">Beranda</a></li>
-                <li><a href="#about">Apa itu P2GP?</a></li>
-                <li><a href="#dampak">Dampak</a></li>
-                <li><a href="#perspektif">Hukum & Agama</a></li>
-                <li><a href="#mitos">Mitos vs Fakta</a></li>
-            </ul>
-            <div class="burger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-        </nav>
+      <nav>
+        <div class="logo">SASADU</div>
+        <ul class="nav-links">
+          <li><a href="#home">Beranda</a></li>
+          <li><a href="#about">Apa itu P2GP?</a></li>
+          <li><a href="#dampak">Dampak</a></li>
+          <li><a href="#perspektif">Hukum & Agama</a></li>
+          <li><a href="#mitos">Mitos vs Fakta</a></li>
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+      </nav>
     </header>
 
     <section id="home" class="hero">
-        <div class="hero-content">
-            <h1>Sasarengan Sadayana Edukasi Sunat Perempuan</h1>
-            <p>Bersama melindungi perempuan dan anak dari praktik berbahaya. P2GP bukan sekadar tradisi, tapi masalah kesehatan dan hak asasi.</p>
-            <a href="#about" class="btn">Pelajari Lebih Lanjut</a>
-        </div>
+      <div class="hero-content">
+        <h1>Sasarengan Sadayana Edukasi Sunat Perempuan</h1>
+        <p>
+          Bersama melindungi perempuan dan anak dari praktik berbahaya. P2GP
+          bukan sekadar tradisi, tapi masalah kesehatan dan hak asasi.
+        </p>
+        <a href="#about" class="btn">Pelajari Lebih Lanjut</a>
+      </div>
     </section>
 
     <section id="about">
-        <h2>Apa itu P2GP?</h2>
-        <div class="about-content">
-            <div class="about-img">
-                <p>[Area Gambar Ilustrasi]</p>
-            </div>
-            <div class="about-text">
-                <p><strong>P2GP</strong> (Pemotongan dan Pelukaan Genitalia Perempuan) adalah segala bentuk pemotongan alat kelamin perempuan, baik sebagian atau keseluruhan, atau perlukaan lain pada organ kelamin perempuan dengan alasan di luar medis.</p>
-                <br>
-                <p>Jenis tindakan ini meliputi:</p>
-                <ul class="content-list">
-                    <li>Pemotongan klitoris (insisi/eksisi).</li>
-                    <li>Penggoresan atau penusukan jarum.</li>
-                    <li>Pelukaan simbolis (seperti "cubit kodok" atau "nyepitan").</li>
-                </ul>
-                <br>
-                <p>Data Riskesdas menunjukkan praktik ini sering kali dilakukan pada usia bayi (0-5 bulan) dan dapat dilakukan oleh tenaga medis maupun dukun bayi.</p>
-            </div>
+      <h2>Apa itu P2GP?</h2>
+      <div class="about-content">
+        <div class="about-img">
+          <img
+            src="assets/p2gp-illustration.png"
+            alt="Ilustrasi Edukatif Anatomi P2GP"
+            style="
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              border-radius: var(--radius-xl);
+            "
+          />
         </div>
+        <div class="about-text">
+          <p>
+            <strong>P2GP</strong> (Pemotongan dan Pelukaan Genitalia Perempuan)
+            adalah segala bentuk pemotongan alat kelamin perempuan, baik
+            sebagian atau keseluruhan, atau perlukaan lain pada organ kelamin
+            perempuan dengan alasan di luar medis.
+          </p>
+          <br />
+          <p>Jenis tindakan ini meliputi:</p>
+          <ul class="content-list">
+            <li>Pemotongan klitoris (insisi/eksisi).</li>
+            <li>Penggoresan atau penusukan jarum.</li>
+            <li>Pelukaan simbolis (seperti "cubit kodok" atau "nyepitan").</li>
+          </ul>
+          <br />
+          <p>
+            Data Riskesdas menunjukkan praktik ini sering kali dilakukan pada
+            usia bayi (0-5 bulan) dan dapat dilakukan oleh tenaga medis maupun
+            dukun bayi.
+          </p>
+        </div>
+      </div>
     </section>
 
     <section id="dampak" class="bg-pink">
-        <h2>Dampak Kesehatan</h2>
-        <div class="cards">
-            <div class="card">
-                <h3>Jangka Pendek</h3>
-                <p>Nyeri berlebihan, pendarahan hebat (syok), infeksi, sulit berkemih, hingga pembengkakan jaringan.</p>
-            </div>
-            <div class="card">
-                <h3>Jangka Panjang</h3>
-                <p>Trauma psikologis, nyeri kronis, kista, hingga disfungsi seksual (berkurangnya kepuasan atau sakit saat berhubungan).</p>
-            </div>
-            <div class="card">
-                <h3>Komplikasi Reproduksi</h3>
-                <p>Meningkatkan risiko kesulitan persalinan, risiko robekan jalan lahir yang parah, serta membahayakan bayi baru lahir.</p>
-            </div>
+      <h2>Dampak Kesehatan</h2>
+      <div class="cards">
+        <div class="card">
+          <h3>Jangka Pendek</h3>
+          <p>
+            Nyeri berlebihan, pendarahan hebat (syok), infeksi, sulit berkemih,
+            hingga pembengkakan jaringan.
+          </p>
         </div>
+        <div class="card">
+          <h3>Jangka Panjang</h3>
+          <p>
+            Trauma psikologis, nyeri kronis, kista, hingga disfungsi seksual
+            (berkurangnya kepuasan atau sakit saat berhubungan).
+          </p>
+        </div>
+        <div class="card">
+          <h3>Komplikasi Reproduksi</h3>
+          <p>
+            Meningkatkan risiko kesulitan persalinan, risiko robekan jalan lahir
+            yang parah, serta membahayakan bayi baru lahir.
+          </p>
+        </div>
+      </div>
     </section>
 
     <section id="perspektif">
-        <h2>Perspektif Hukum & Agama</h2>
-        <div class="tabs">
-            <button class="tab-btn active" onclick="openTab(event, 'Hukum')">Hukum Negara</button>
-            <button class="tab-btn" onclick="openTab(event, 'Agama')">Pandangan Agama</button>
-        </div>
+      <h2>Perspektif Hukum & Agama</h2>
+      <div class="tabs">
+        <button class="tab-btn active" onclick="openTab(event, 'Hukum')">
+          Hukum Negara
+        </button>
+        <button class="tab-btn" onclick="openTab(event, 'Agama')">
+          Pandangan Agama
+        </button>
+      </div>
 
-        <div id="Hukum" class="tab-content active">
-            <h3>Perlindungan Hukum di Indonesia</h3>
-            <p>Negara hadir untuk melindungi anak perempuan. Berdasarkan <strong>UU No 17 Tahun 2023</strong> tentang Kesehatan, praktik yang membahayakan reproduksi dilarang.</p>
-            <br>
-            <p>Terbaru, <strong>PP No 28 Tahun 2024</strong> secara eksplisit menyebutkan upaya menghapus praktik sunat perempuan. Organisasi profesi seperti IBI (Ikatan Bidan Indonesia) juga telah melarang anggotanya melakukan praktik ini.</p>
-        </div>
+      <div id="Hukum" class="tab-content active">
+        <h3>Perlindungan Hukum di Indonesia</h3>
+        <p>
+          Negara hadir untuk melindungi anak perempuan. Berdasarkan
+          <strong>UU No 17 Tahun 2023</strong> tentang Kesehatan, praktik yang
+          membahayakan reproduksi dilarang.
+        </p>
+        <br />
+        <p>
+          Terbaru, <strong>PP No 28 Tahun 2024</strong> secara eksplisit
+          menyebutkan upaya menghapus praktik sunat perempuan. Organisasi
+          profesi seperti IBI (Ikatan Bidan Indonesia) juga telah melarang
+          anggotanya melakukan praktik ini.
+        </p>
+      </div>
 
-        <div id="Agama" class="tab-content">
-            <h3>Pandangan Islam & KUPI</h3>
-            <p>Banyak ulama menegaskan bahwa <strong>tidak ada dalil sahih</strong> yang mewajibkan khitan perempuan. Hadis yang sering dikutip dinilai lemah (dhaif) oleh ahli hadis.</p>
-            <br>
-            <p>Kongres Ulama Perempuan Indonesia (KUPI) menyatakan sikap keagamaan:</p>
-            <blockquote class="quote-box">
-                "Hukum melakukan tindakan pemotongan/pelukaan genitalia perempuan (P2GP) tanpa alasan medis adalah <strong>Haram</strong>. Melindungi perempuan dari bahaya ini adalah Wajib."
-            </blockquote>
-            <p style="margin-top: 10px;">Prinsip utamanya adalah <em>La dharara wa la dhirar</em> (jangan membahayakan dan jangan dibahayakan).</p>
-        </div>
+      <div id="Agama" class="tab-content">
+        <h3>Pandangan Islam & KUPI</h3>
+        <p>
+          Banyak ulama menegaskan bahwa
+          <strong>tidak ada dalil sahih</strong> yang mewajibkan khitan
+          perempuan. Hadis yang sering dikutip dinilai lemah (dhaif) oleh ahli
+          hadis.
+        </p>
+        <br />
+        <p>
+          Kongres Ulama Perempuan Indonesia (KUPI) menyatakan sikap keagamaan:
+        </p>
+        <blockquote class="quote-box">
+          "Hukum melakukan tindakan pemotongan/pelukaan genitalia perempuan
+          (P2GP) tanpa alasan medis adalah <strong>Haram</strong>. Melindungi
+          perempuan dari bahaya ini adalah Wajib."
+        </blockquote>
+        <p style="margin-top: 10px">
+          Prinsip utamanya adalah <em>La dharara wa la dhirar</em> (jangan
+          membahayakan dan jangan dibahayakan).
+        </p>
+      </div>
     </section>
 
     <section id="mitos">
-        <h2>Mitos vs Fakta</h2>
-        <div class="accordion">
-            <div class="accordion-item">
-                <div class="accordion-header">
-                    Mitos: Sunat perempuan untuk mengendalikan syahwat wanita.
-                    <span>+</span>
-                </div>
-                <div class="accordion-body">
-                    <p><strong>Fakta:</strong> Tidak ada bukti ilmiah bahwa memotong klitoris mengendalikan moral. Sebaliknya, hal ini justru merusak fungsi seksual yang sehat dan bisa menyebabkan trauma. Kesucian perempuan tidak ditentukan oleh pelukaan fisik.</p>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-header">
-                    Mitos: Sunat perempuan wajib menurut agama.
-                    <span>+</span>
-                </div>
-                <div class="accordion-body">
-                    <p><strong>Fakta:</strong> Mayoritas ulama berpendapat tidak wajib (hanya tradisi/makrumah). Lembaga seperti Al-Azhar Mesir bahkan mengharamkannya karena terbukti membawa mudharat (bahaya).</p>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <div class="accordion-header">
-                    Mitos: Aman jika dilakukan oleh dokter atau bidan.
-                    <span>+</span>
-                </div>
-                <div class="accordion-body">
-                    <p><strong>Fakta:</strong> Medis tidak mengenal prosedur "sunat perempuan" karena tidak ada indikasi medisnya. Melakukan prosedur medis untuk tujuan non-medis yang melukai organ sehat tetap melanggar etika kedokteran.</p>
-                </div>
-            </div>
+      <h2>Mitos vs Fakta</h2>
+      <div class="accordion">
+        <div class="accordion-item">
+          <div class="accordion-header">
+            Mitos: Sunat perempuan untuk mengendalikan syahwat wanita.
+            <span>+</span>
+          </div>
+          <div class="accordion-body">
+            <p>
+              <strong>Fakta:</strong> Tidak ada bukti ilmiah bahwa memotong
+              klitoris mengendalikan moral. Sebaliknya, hal ini justru merusak
+              fungsi seksual yang sehat dan bisa menyebabkan trauma. Kesucian
+              perempuan tidak ditentukan oleh pelukaan fisik.
+            </p>
+          </div>
         </div>
+        <div class="accordion-item">
+          <div class="accordion-header">
+            Mitos: Sunat perempuan wajib menurut agama.
+            <span>+</span>
+          </div>
+          <div class="accordion-body">
+            <p>
+              <strong>Fakta:</strong> Mayoritas ulama berpendapat tidak wajib
+              (hanya tradisi/makrumah). Lembaga seperti Al-Azhar Mesir bahkan
+              mengharamkannya karena terbukti membawa mudharat (bahaya).
+            </p>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div class="accordion-header">
+            Mitos: Aman jika dilakukan oleh dokter atau bidan.
+            <span>+</span>
+          </div>
+          <div class="accordion-body">
+            <p>
+              <strong>Fakta:</strong> Medis tidak mengenal prosedur "sunat
+              perempuan" karena tidak ada indikasi medisnya. Melakukan prosedur
+              medis untuk tujuan non-medis yang melukai organ sehat tetap
+              melanggar etika kedokteran.
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer>
-        <h3>SASADU</h3>
-        <p>Inisiatif Edukasi Pencegahan P2GP.</p>
-        <p class="footer-note">Sumber data: Dokumen Sosialisasi P2GP, KUPI, & Riset Kesehatan.</p>
+      <h3>SASADU</h3>
+      <p>Inisiatif Edukasi Pencegahan P2GP.</p>
+      <p class="footer-note">
+        Sumber data: Dokumen Sosialisasi P2GP, KUPI, & Riset Kesehatan.
+      </p>
     </footer>
 
     <script src="assets/script.js"></script>
-</body>
+  </body>
 </html>
