--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
 
     <section id="about">
       <h2>Apa itu P2GP?</h2>
+
+      <!-- Row 1: Anatomi Illustration + Definisi -->
       <div class="about-content">
-        <div class="about-img">
+        <div class="about-img" style="height: 500px">
           <img
-            src="assets/p2gp-illustration.png"
+            src="assets/img/p2gp-illustration.png"
             alt="Ilustrasi Edukatif Anatomi P2GP"
             style="
               width: 100%;
@@ -64,45 +66,146 @@
             sebagian atau keseluruhan, atau perlukaan lain pada organ kelamin
             perempuan dengan alasan di luar medis.
           </p>
-          <br />
-          <p>Jenis tindakan ini meliputi:</p>
-          <ul class="content-list">
-            <li>Pemotongan klitoris (insisi/eksisi).</li>
-            <li>Penggoresan atau penusukan jarum.</li>
-            <li>Pelukaan simbolis (seperti "cubit kodok" atau "nyepitan").</li>
-          </ul>
-          <br />
-          <p>
-            Data Riskesdas menunjukkan praktik ini sering kali dilakukan pada
-            usia bayi (0-5 bulan) dan dapat dilakukan oleh tenaga medis maupun
-            dukun bayi.
+          <p style="margin-top: 1rem">
+            <strong>Mengapa P2GP Berbahaya?</strong>
           </p>
+          <p>
+            P2GP dilakukan tanpa alasan medis dan hanya berdasarkan kepercayaan
+            atau tradisi. Praktik ini melanggar hak anak perempuan atas
+            kesehatan, keamanan, dan tubuhnya. Tidak ada manfaat kesehatan dari
+            P2GP, yang ada hanya bahaya dan komplikasi.
+          </p>
+        </div>
+      </div>
+
+      <!-- Row 2: Types Illustration + Jenis & Data -->
+      <div class="about-content" style="margin-top: 0.75rem">
+        <div class="about-img" style="height: 500px">
+          <img
+            src="assets/img/p2gp-types.png"
+            alt="Ilustrasi Jenis-jenis Tindakan P2GP"
+            style="
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
+              border-radius: var(--radius-xl);
+              box-shadow: var(--shadow-lg);
+            "
+          />
+        </div>
+        <div class="about-text">
+          <p><strong>Jenis-jenis Tindakan P2GP:</strong></p>
+          <ul class="content-list">
+            <li>Pemotongan klitoris (insisi/eksisi)</li>
+            <li>Penggoresan atau penusukan jarum</li>
+            <li>Pelukaan simbolis (seperti "cubit kodok" atau "nyepitan")</li>
+            <li>Pengikisan jaringan genitalia</li>
+          </ul>
+          <p style="margin-top: 1rem"><strong>Data dan Fakta:</strong></p>
+          <ul class="content-list">
+            <li>
+              Lebih dari <strong>200 juta</strong> perempuan dan anak di dunia
+              pernah mengalami P2GP
+            </li>
+            <li>
+              Di Indonesia, prevalensi P2GP mencapai
+              <strong>49-58%</strong> pada anak perempuan usia 0-11 tahun
+              (Riskesdas)
+            </li>
+            <li>
+              Praktik ini sering dilakukan pada bayi (0-5 bulan) tanpa
+              persetujuan
+            </li>
+            <li>Dapat dilakukan oleh tenaga medis maupun dukun bayi</li>
+            <li>P2GP adalah pelanggaran HAM dan hak anak internasional</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Row 3: Statistics Illustration + Global Support -->
+      <div class="about-content" style="margin-top: 0.75rem">
+        <div class="about-img" style="height: 500px">
+          <img
+            src="assets/img/p2gp-statistics.png"
+            alt="Statistik dan Data Global P2GP"
+            style="
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
+              border-radius: var(--radius-xl);
+              box-shadow: var(--shadow-lg);
+            "
+          />
+        </div>
+        <div class="about-text">
+          <p><strong>Mengapa P2GP Harus Dihentikan?</strong></p>
+          <p>
+            P2GP adalah praktik berbahaya yang tidak memiliki manfaat kesehatan
+            sama sekali. Organisasi kesehatan dunia, termasuk WHO dan UNICEF,
+            mengklasifikasikannya sebagai pelanggaran hak asasi manusia yang
+            serius.
+          </p>
+          <p style="margin-top: 1rem">
+            <strong>Dukungan Global untuk Penghapusan P2GP:</strong>
+          </p>
+          <ul class="content-list">
+            <li>WHO (Organisasi Kesehatan Dunia) mengutuk praktik ini</li>
+            <li>UNICEF aktif dalam kampanye penghapusan P2GP</li>
+            <li>Lebih dari 30 negara telah melarang P2GP secara hukum</li>
+            <li>Target global: menghapus P2GP pada tahun 2030</li>
+            <li>Indonesia berkomitmen untuk perlindungan anak perempuan</li>
+          </ul>
         </div>
       </div>
     </section>
 
     <section id="dampak" class="bg-pink">
       <h2>Dampak Kesehatan</h2>
+
       <div class="cards">
         <div class="card">
           <h3>Jangka Pendek</h3>
           <p>
-            Nyeri berlebihan, pendarahan hebat (syok), infeksi, sulit berkemih,
-            hingga pembengkakan jaringan.
+            <strong>Nyeri berlebihan:</strong> Luka pada area sensitif tanpa
+            anestesi yang memadai.<br /><br />
+            <strong>Pendarahan hebat:</strong> Dapat menyebabkan syok dan bahkan
+            kematian.<br /><br />
+            <strong>Infeksi:</strong> Risiko tinggi karena alat tidak steril
+            atau perawatan yang buruk.<br /><br />
+            <strong>Kesulitan berkemih:</strong> Pembengkakan dan nyeri
+            menghalangi proses normal.<br /><br />
+            <strong>Trauma psikologis akut:</strong> Pengalaman menakutkan yang
+            tidak terlupakan.
           </p>
         </div>
         <div class="card">
           <h3>Jangka Panjang</h3>
           <p>
-            Trauma psikologis, nyeri kronis, kista, hingga disfungsi seksual
-            (berkurangnya kepuasan atau sakit saat berhubungan).
+            <strong>Trauma psikologis:</strong> PTSD, depresi, kecemasan, dan
+            gangguan mental lainnya.<br /><br />
+            <strong>Nyeri kronis:</strong> Rasa sakit yang berlangsung seumur
+            hidup.<br /><br />
+            <strong>Kista dan keloid:</strong> Pertumbuhan jaringan abnormal
+            yang menyakitkan.<br /><br />
+            <strong>Disfungsi seksual:</strong> Berkurangnya atau hilangnya
+            kepuasan, dispareunia (nyeri saat berhubungan).<br /><br />
+            <strong>Gangguan menstruasi:</strong> Nyeri dan kesulitan saat
+            menstruasi.
           </p>
         </div>
         <div class="card">
           <h3>Komplikasi Reproduksi</h3>
           <p>
-            Meningkatkan risiko kesulitan persalinan, risiko robekan jalan lahir
-            yang parah, serta membahayakan bayi baru lahir.
+            <strong>Kesulitan persalinan:</strong> Jaringan parut menghambat
+            proses melahirkan normal.<br /><br />
+            <strong>Robekan jalan lahir:</strong> Peningkatan risiko robekan
+            parah saat melahirkan.<br /><br />
+            <strong>Risiko pada bayi:</strong> Meningkatkan kemungkinan bayi
+            lahir dengan komplikasi atau kematian.<br /><br />
+            <strong>Kebutuhan intervensi bedah:</strong> Seringkali memerlukan
+            operasi caesar.<br /><br />
+            <strong>Pendarahan postpartum:</strong> Risiko pendarahan serius
+            setelah melahirkan.
           </p>
         </div>
       </div>
@@ -199,7 +302,37 @@
               <strong>Fakta:</strong> Medis tidak mengenal prosedur "sunat
               perempuan" karena tidak ada indikasi medisnya. Melakukan prosedur
               medis untuk tujuan non-medis yang melukai organ sehat tetap
-              melanggar etika kedokteran.
+              melanggar etika kedokteran. IBI (Ikatan Bidan Indonesia) telah
+              melarang anggotanya melakukan P2GP sejak tahun 2010.
+            </p>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div class="accordion-header">
+            Mitos: P2GP membuat area kewanitaan lebih bersih.
+            <span>+</span>
+          </div>
+          <div class="accordion-body">
+            <p>
+              <strong>Fakta:</strong> Tidak ada bukti ilmiah bahwa P2GP
+              meningkatkan kebersihan. Justru sebaliknya, luka terbuka
+              meningkatkan risiko infeksi. Kebersihan dapat dijaga dengan cara
+              yang aman tanpa melukai tubuh.
+            </p>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <div class="accordion-header">
+            Mitos: Kalau tidak disunat, anak perempuan akan sakit atau tidak
+            normal.
+            <span>+</span>
+          </div>
+          <div class="accordion-body">
+            <p>
+              <strong>Fakta:</strong> Tidak ada dampak kesehatan negatif jika
+              tidak melakukan P2GP. Organ genitalia perempuan diciptakan dengan
+              fungsi normal dan tidak perlu dimodifikasi. Justru P2GP lah yang
+              menyebabkan masalah kesehatan.
             </p>
           </div>
         </div>
