--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           <li><a href="#about">Apa itu P2GP?</a></li>
           <li><a href="#dampak">Dampak</a></li>
           <li><a href="#perspektif">Hukum & Agama</a></li>
+          <li><a href="#kearifan">Kearifan Lokal</a></li>
           <li><a href="#mitos">Mitos vs Fakta</a></li>
+          <li><a href="#pencegahan">Pencegahan</a></li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
@@ -262,6 +264,58 @@
       </div>
     </section>
 
+    <section id="kearifan" class="bg-warm">
+      <h2>Nilai Karakter & Kearifan Lokal</h2>
+      <div class="about-content">
+        <div class="about-img" style="height: 500px">
+          <img
+            src="assets/img/local-wisdom.png"
+            alt="Ilustrasi Kearifan Lokal dan Nilai Karakter"
+            style="
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
+              border-radius: var(--radius-xl);
+              box-shadow: var(--shadow-lg);
+            "
+          />
+        </div>
+        <div class="about-text">
+          <p>
+            Melindungi anak perempuan bukan hanya kewajiban hukum, tapi juga
+            cerminan dari nilai-nilai luhur budaya kita. Semangat
+            <strong>"Sasarengan Sadayana"</strong> (Bersama Semuanya) mengajak
+            kita untuk saling menjaga.
+          </p>
+          <br />
+          <p><strong>Filosofi Silih Asah Silih Asih Silih Asuh:</strong></p>
+          <ul class="content-list">
+            <li>
+              <strong>Silih Asih (Kasih Sayang):</strong> Menyayangi anak
+              perempuan berarti menjaga tubuhnya tetap utuh dan sehat, bukan
+              melukainya dengan alasan tradisi.
+            </li>
+            <li>
+              <strong>Silih Asuh (Mengayomi):</strong> Kewajiban kolektif
+              keluarga dan masyarakat untuk melindungi anak dari segala bentuk
+              kekerasan dan bahaya, termasuk P2GP.
+            </li>
+            <li>
+              <strong>Silih Asah (Mencerdaskan):</strong> Saling mengingatkan
+              dan mengedukasi dengan ilmu yang benar bahwa perempuan tanpa sunat
+              adalah perempuan yang sempurna.
+            </li>
+          </ul>
+          <br />
+          <p>
+            <strong>Harkat & Martabat Perempuan:</strong> Budaya kita sangat
+            memuliakan perempuan. Menghormati mereka dimulai sejak bayi dengan
+            tidak mengambil hak atas tubuh mereka sendiri.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <section id="mitos">
       <h2>Mitos vs Fakta</h2>
       <div class="accordion">
@@ -335,6 +389,56 @@
               menyebabkan masalah kesehatan.
             </p>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="pencegahan">
+      <h2>Langkah Pencegahan & Solusi</h2>
+      <div class="about-content">
+        <div class="about-img" style="height: 500px">
+          <img
+            src="assets/img/p2gp-prevention.png"
+            alt="Ilustrasi Pencegahan P2GP"
+            style="
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
+              border-radius: var(--radius-xl);
+              box-shadow: var(--shadow-lg);
+            "
+          />
+        </div>
+        <div class="about-text">
+          <p>
+            Upaya pencegahan P2GP memerlukan peran aktif dari seluruh lapisan
+            masyarakat. Mari lindungi generasi penerus dari praktik yang
+            merugikan ini.
+          </p>
+          <br />
+          <p><strong>Apa yang Bisa Kita Lakukan?</strong></p>
+          <ul class="content-list">
+            <li>
+              <strong>Edukasi Dini dalam Keluarga:</strong> Bekali diri dengan
+              pengetahuan medis dan agama yang benar agar tidak mudah
+              terpengaruh mitos.
+            </li>
+            <li>
+              <strong>Dialog Terbuka di Rumah:</strong> Diskusikan dengan
+              pasangan, orang tua, dan mertua tentang bahaya P2GP demi kesehatan
+              anak cucu.
+            </li>
+            <li>
+              <strong>Berani Menolak (Stop P2GP):</strong> Tegas menolak jika
+              ada tawaran atau paksaan dari lingkungan untuk melakukan P2GP.
+              Kesehatan anak adalah prioritas utama.
+            </li>
+            <li>
+              <strong>Lapor dan Konsultasi:</strong> Jika mengalami tekanan dari
+              komunitas, konsultasikan dengan petugas kesehatan (bidan/dokter)
+              atau hubungi layanan perlindungan anak.
+            </li>
+          </ul>
         </div>
       </div>
     </section>
